update news-line time

--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -145,6 +145,7 @@ $green: #9bc1bc
 		display: inline-block
 		color: #757575
 		vertical-align: middle
+		text-transform: uppercase
 	span
 		display: inline-block
 		padding: 0 5px
