--- a/src/partials/popups.html
+++ b/src/partials/popups.html
@@ -114,7 +114,7 @@
             <form action="" class="profile-form">
                 <div class="profile-form__field">
                     <div class="profile-form__label">АЛЬБОМ</div>
-                    <div class="select select_mod js-select">
+                    <!-- <div class="select select_mod js-select">
                         <div class="select__text js-select-text">Мой альбом</div>
                         <i class="fa fa-angle-down"></i>
                         <ul class="select__list js-select-list">
@@ -127,7 +127,12 @@
                             <option value="value1">value1</option>
                             <option value="value2">value2</option>
                         </select>
-                    </div>
+                    </div> -->
+                    <select class="js-select-box is-gray" style="width: 100%;">
+                        <option value="Мой альбом">Мой альбом</option>
+                        <option value="value1">value1</option>
+                        <option value="value2">value2</option>
+                    </select>
                 </div>
                 <div class="profile-form__field">
                     <div class="profile-form__label">ОПИСАНИЕ</div>
@@ -147,6 +152,6 @@
                 </div>
             </form>
         </div>
-    </div>    
+    </div>
 </div>
 <!-- end popup-download -->
