--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -6,5 +6,6 @@
 <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" media="all" href="css/font-awesome.min.css" >
+<link rel="stylesheet" media="all" href="css/jquery.selectBox.css" >
 <link rel="stylesheet" media="all" href="css/style.css" >
 <script src="js/app.js"></script>
