--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -876,6 +876,7 @@ a
 		border-radius: 3px
 		border-color: #d8d8d8
 		background: #fff
+		+reg
 		&.selectBox-menuShowing
 			border-radius: 3px 3px 0 0
 		.selectBox-label
