--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -9,65 +9,9 @@
 			<span></span>
 		</button>
 		<div class="header__inner">
-			<nav class="nav js-nav" data-nav="main-nav">
-				<ul class="nav__list">
-					<li class="nav__item">
-						<a href="#" class="nav__link is-brown">
-							<div class="nav__link-in">
-								<span>Здоровье</span>
-							</div>
-						</a>
-					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link is-purple">
-							<div class="nav__link-in">
-								<span>Образование</span>
-							</div>
-						</a>
-					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link is-yellow">
-							<div class="nav__link-in">
-								<span>Маленькая политика</span>
-							</div>
-						</a>
-					</li>
-					<li class="nav__item nav-specials js-nav-specials">
-						<a href="#" class="nav-specials__link nav__link is-orange js-specials-link">
-							<div class="nav__link-in">
-								<span>Спецпроекты</span>
-								<i class="fa fa-chevron-down"></i>
-							</div>
-						</a>
-						<ul class="nav-specials__list js-specials-drop">
-							<li class="nav__item">
-								<a href="#" class="nav__link is-orange">
-									<div class="nav__link-in">
-										<span>Патронус</span>
-										<small>Детский правозащитный проект</small>
-									</div>
-								</a>
-							</li>
-							<li class="nav__item">
-								<a href="#" class="nav__link is-orange">
-									<div class="nav__link-in">
-										<span>Пазлы</span>
-										<small>Знакомства для инвалидов</small>
-									</div>
-								</a>
-							</li>
-							<li class="nav__item">
-								<a href="#" class="nav__link is-orange">
-									<div class="nav__link-in">
-										<span>Бюро справедливости</span>
-										<small>Обратиться к депутату</small>
-									</div>
-								</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</nav>
+
+			//=include nav.html
+
 			<a href="#" class="btn-enter js-open-popup" data-link="popup-login">
 				<i class="fa fa-sign-in"></i>
 				<span>Вход</span>
