--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -323,6 +323,9 @@ a
 		&:hover
 			background: darken(#f7b153, 10)
 
+.item2
+	.item2__txt
+		font-size: 18px
 // item
 .item
 	position: relative
@@ -644,6 +647,13 @@ a
 			.item__txt
 				font-size: 20px
 				line-height: 23px
+		&.item_mod2
+			height: inherit
+			.item__img
+				height: 142px
+			.item__subtitle
+				font-size: 20px
+				line-height: 20px
 		&.item_big
 			height: 672px
 			.item__img
