--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -586,6 +586,40 @@
 			+r3
 				font-size: 16px
 
+.block-v1
+	height: 402px
+	border: 1px solid #d27857
+	position: relative
+	text-align: center
+	margin-bottom: 30px
+	&__link
+		display: block
+		height: 100%
+		padding: 57px 20px 17px
+		overflow: hidden
+		color: #d27857
+	&__info
+		font-size: 22px
+		line-height: 22px
+	&__text
+		margin-top: 10px
+		p
+			font-size: 20px
+			line-height: 28px
+			color: #282828
+			max-height: 252px
+			overflow: hidden
+			transition: color 0.25s
+	&__meta
+		margin-top: 10px
+		p
+			font-size: 14px
+			line-height: 14px
+			color: #282828
+			max-height: 252px
+			overflow: hidden
+			transition: color 0.25s
+
 .item-banner
 	padding: 0 30px
 	color: #fff
