--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,22 +1,22 @@
 <footer class="footer">
-	<div class="footer__top">
-		<div class="container">
-			<div class="footer__text">
-				<a href="#" class="footer__logo">
-					<img src="img/footer-logo.svg" alt="">
-				</a>
-				<div class="footer__question">КАК ЖИТЬ В РОССИИ И НЕ УМЕРЕТЬ</div>
-			</div>
-			<div class="subscribe">
-				<div class="subscribe__label">Подпишитесь на еженедельную рассылку:</div>
-				<form action="" class="subscribe__form">
-					<input type="text" class="subscribe__input" placeholder="Ваш e-mail">
-					<i class="fa fa-envelope-o"></i>
-					<button class="subscribe__btn">Подписаться</button>
-				</form>
-			</div>
-		</div>
-	</div>
+	<!--<div class="footer__top">-->
+		<!--<div class="container">-->
+			<!--<div class="footer__text">-->
+				<!--<a href="#" class="footer__logo">-->
+					<!--<img src="img/footer-logo.svg" alt="">-->
+				<!--</a>-->
+				<!--<div class="footer__question">КАК ЖИТЬ В РОССИИ И НЕ УМЕРЕТЬ</div>-->
+			<!--</div>-->
+			<!--<div class="subscribe">-->
+				<!--<div class="subscribe__label">Подпишитесь на еженедельную рассылку:</div>-->
+				<!--<form action="" class="subscribe__form">-->
+					<!--<input type="text" class="subscribe__input" placeholder="Ваш e-mail">-->
+					<!--<i class="fa fa-envelope-o"></i>-->
+					<!--<button class="subscribe__btn">Подписаться</button>-->
+				<!--</form>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
 	<div class="footer__bottom">
 		<div class="container">
 			<ul class="footer__social">
