--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -395,6 +395,8 @@ body
 		vertical-align: top
 		margin: 0 20px 0 0
 		position: relative
+		+r(1200)
+			margin: 0 15px 0 0
 		+r2
 			display: block
 			margin: 0
@@ -470,6 +472,8 @@ body
 		display: block
 		position: relative
 		transition: color 0.3s
+		+r(1200)
+			font-size: 16px
 		+r2
 			padding: 0 10px 0 30px
 			line-height: 58px
@@ -537,6 +541,8 @@ body
 			display: block
 			padding: 25px 0 27px
 			position: relative
+			+r(1200)
+				padding: 26px 0 28px
 			+r2
 				padding: 0
 			&:before
