--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -540,3 +540,243 @@ $green: #9bc1bc
 			max-width: initial
 		.h3
 			+med
+
+.white-wrap
+	background: #fff
+	+clr
+	.main-head
+		margin-bottom: 0
+
+.resume
+	max-width: 1100px
+	+r1
+		max-width: 1100px
+	&__form
+		padding: 20px 0
+		+r2
+			padding: 0 0 20px
+	&__row
+		+clr
+		border-top: 1px solid #d8d8d8
+		padding: 30px 0 10px
+		&:first-child
+			border-top: none
+	&__title
+		clear: both
+		font-size: 24px
+		line-height: 1.3
+		+med
+		padding-bottom: 50px
+		+r3
+			padding-bottom: 30px
+	&__right
+		width: 31%
+		padding-left: 30px
+		+r2
+			padding: 0 0 20px
+	&__left
+		width: 69%
+	&__left, &__right
+		float: left
+		+r2
+			float: none
+			width: 100%
+	.block-alert
+		padding: 24px 7px 26px 26px
+		p
+			+bold
+			font-size: 18px
+			line-height: 1.7
+
+.r-box
+	padding-bottom: 20px
+	+clr
+	&_mod
+		.r-box
+			&__label
+				width: 43%
+				padding-right: 30px
+				+r2
+					padding-right: 0
+			&__field
+				width: 57%
+				text-align: right
+				+r2
+					text-align: left
+			&__label, &__field
+				+r2
+					width: 100%
+	&__label
+		width: 30%
+		+med
+		font-size: 17px
+		padding-right: 15px
+		+r2
+			padding: 0 0 3px
+	&__field
+		width: 70%
+		&_mod
+			+clr
+	&__label, &__field
+		float: left
+		+r2
+			float: none
+			width: 100%
+	.input-full, .textarea-full
+		font-size: 16px
+		padding: 15px 15px 14px
+		&::placeholder
+			+reg
+			color: #8e8e8e
+		&_big
+			font-size: 28px
+			padding: 8px 15px 7px
+	&__date
+		font-size: 0
+		+clr
+	&__med
+		width: 220px
+	&__small
+		width: 110px
+	&__med, &__small
+		padding-right: 30px
+		float: left
+		+r3
+			float: none
+			width: 100%
+			padding: 0 0 20px
+	p
+		color: #9c9c9c
+		font-size: 14px
+		line-height: 1.3
+		padding-top: 3px
+	&__select
+		width: 63%
+		padding-right: 30px
+		float: left
+		+r3
+			width: 100%
+			padding-right: 0
+			float: none
+			margin-bottom: 20px
+	&__checkbox
+		float: left
+		+r1
+			float: none
+			padding-top: 20px
+			clear: both
+		+r2
+			float: none
+	.btn-full
+		max-width: 100%
+		padding: 16px 15px 15px
+		margin-top: 10px
+.r-radios
+	border-radius: 3px
+	border: solid 1px #d8d8d8
+	overflow: hidden
+	font-size: 0
+	display: inline-block
+	vertical-align: top
+	+r2
+		border: none
+		border-radius: 0
+	&_mod
+		.r-radio
+			span
+				padding: 13px 15px 12px
+	.r-radio
+		border-right: solid 1px #d8d8d8
+		&:last-child
+			border: none
+			+r2
+				border: solid 1px #d8d8d8
+.r-radio
+	background-color: #ffffff
+	position: relative
+	display: inline-block
+	vertical-align: top
+	cursor: pointer
+	+r2
+		border-radius: 3px
+		border: solid 1px #d8d8d8
+		margin: 0 15px 15px 0
+	input
+		position: absolute
+		top: 0
+		left: 0
+		opacity: 0
+		visibility: hidden
+		&:checked + span
+			background: #ff8c61
+			color: #fff
+	span
+		font-size: 16px
+		line-height: 1.2
+		padding: 13px 41px 12px
+		display: block
+		transition: background 0.25s, color 0.25s
+		min-width: 135px
+		text-align: center
+		+r1
+			min-width: 120px
+.upload-photo
+	display: block
+	width: 100%
+	height: 365px
+	background-color: #ffffff
+	border: solid 1px #d8d8d8
+	position: relative
+	+vertical
+	cursor: pointer
+	+r2
+		max-width: 300px
+		margin: 0 auto
+	input
+		position: absolute
+		top: 0
+		left: 0
+		opacity: 0
+		visibility: hidden
+	span
+		display: inline-block
+		vertical-align: middle
+		color: #ff8c61
+		i
+			font-size: 120px
+			display: block
+			margin: 0 auto
+		small
+			font-size: 18px
+			text-decoration: underline
+
+.upload-file
+	position: relative
+	background-color: #ffffff
+	border: solid 1px #d8d8d8
+	display: block
+	color: #ff8c61
+	font-size: 16px
+	line-height: 1.3
+	padding: 15px 20px 13px
+	cursor: pointer
+	input
+		position: absolute
+		top: 0
+		left: 0
+		opacity: 0
+		visibility: hidden
+	i
+		font-size: 18px
+		float: left
+		margin: 1px 10px 0 0
+	span
+		overflow: hidden
+
+.r-checks
+	font-size: 0
+	margin-bottom: -20px
+	li
+		display: inline-block
+		vertical-align: top
+		padding: 0 30px 20px 0
