--- a/src/partials/big-map.html
+++ b/src/partials/big-map.html
@@ -82,7 +82,7 @@
 						<form action="/">
 							<div class="request-search">
 								<button class="request-search__btn fa fa-search"></button>
-								<input type="text" class="request-search__input input-full input-full_small input-full_white" placeholder="Поиск">
+								<input type="text" class="request-search__input new-input" placeholder="Поиск">
 							</div>
 							<div class="request-filters__row">
 								<div class="request-filters__field request-filters__field_lg">
@@ -169,11 +169,11 @@
 							<div class="request-label">МАРШРУТ</div>
 							<div class="request-form__point">
 								<span class="request-form__point-icon request-form__point-icon_blue">A</span>
-								<input type="text" class="request-form__point-input input-full input-full_small input-full_white js-show-onfocus-field" data-field="points" placeholder="Адрес или точка на карте">
+								<input type="text" class="request-form__point-input new-input js-show-onfocus-field" data-field="points" placeholder="Адрес или точка на карте">
 							</div>
 							<div class="request-form__point">
 								<span class="request-form__point-icon request-form__point-icon_green">B</span>
-								<input type="text" class="request-form__point-input input-full input-full_small input-full_white js-show-onfocus-field" data-field="points" placeholder="Адрес или точка на карте">
+								<input type="text" class="request-form__point-input new-input js-show-onfocus-field" data-field="points" placeholder="Адрес или точка на карте">
 							</div>
 							<div class="request-form__checkbox">
 								<label class="checkbox-sm">
@@ -188,12 +188,12 @@
 								<div class="request-form__calendar-icon">
 									<i class="fa fa-calendar"></i>
 								</div>
-								<input type="text" class="request-form__calendar-input input-full input-full_small input-full_white">
+								<input type="text" class="request-form__calendar-input new-input">
 							</div>
 						</div>
 						<div class="request-form__field">
 							<div class="request-label">ОПИСАНИЕ</div>
-							<textarea class="request-form__textarea textarea-full textarea-full_small textarea-full_white"></textarea>
+							<textarea class="request-form__textarea  new-textarea"></textarea>
 						</div>
 						<div class="request-form__footer">
 							<div class="request-form__submit">
