--- a/src/sass/_big-map.sass
+++ b/src/sass/_big-map.sass
@@ -2,7 +2,7 @@
 	position: relative
 	height: calc(100vh - 323px)
 	min-height: 600px
-	+r2
+	+r1
 		height: auto
 	&__frame
 		position: absolute
@@ -10,10 +10,15 @@
 		right: 0
 		bottom: 0
 		left: 0
+		+r1
+			position: relative
+			height: 400px
 	&__content
 		overflow: hidden
 		height: 100%
 		+clr
+		+r3
+			padding: 0
 	&__popup
 		position: relative
 		z-index: 10
@@ -22,6 +27,11 @@
 		width: 100%
 		max-width: 648px
 		height: 100%
+		+r1
+			padding: 30px 0 10px
+			max-width: 100%
+		+r3
+			padding: 0
 	&__modal
 		height: 100%
 
@@ -33,14 +43,25 @@
 	width: 100%
 	max-width: 452px
 	height: 100%
+	+r1
+		max-width: 100%
+		height: auto
+	+r3
+		padding: 0
 	&__inner
 		position: relative
 		border: 1px solid #e6e6e6
 		max-height: 100%
 		background: #ffffff
 		box-shadow: 0 0 10px rgba(#000, 0.2)
+		+r3
+			border-right: none
+			border-left: none
+			box-shadow: none
 	&__header
 		padding: 20px
+		+r3
+			padding: 20px 15px
 		.btn-simple
 			width: 100%
 	&[data-state="request-form"]
@@ -55,6 +76,8 @@
 .request-form
 	display: none
 	padding: 15px 20px
+	+r3
+		padding: 15px
 	&__title
 		padding: 3px 0 21px
 		color: #282828
@@ -105,10 +128,6 @@
 	&__footer
 		+clr
 		margin: 0 -10px
-	&__submit,
-	&__cancel
-		float: left
-		padding: 0 10px 10px
 	&__submit
 		width: 62%
 		&-btn
@@ -117,6 +136,14 @@
 		width: 38%
 		&-btn
 			width: 100%
+	&__submit,
+	&__cancel
+		float: left
+		padding: 0 10px 10px
+		+r3
+			float: none
+			width: 100%
+			padding-bottom: 20px
 
 .request-tooltip
 	position: absolute
@@ -142,6 +169,9 @@
 		opacity: 1
 		visibility: visible
 		transform: translate3d(0,0,0)
+		+r1
+			opacity: 0
+			visibility: hidden
 	&:before
 		content: ""
 		position: absolute
@@ -190,16 +220,24 @@
 .request-filters
 	padding: 20px
 	background: #f5f5f5
+	+r3
+		padding: 20px 15px
 	&__row
 		+clr
 		margin: 0 -9px
 	&__field
 		float: left
 		padding: 0 9px
+		width: 100%
 		&_lg
 			width: 60%
 		&_sm
 			width: 40%
+		&_lg,
+		&_sm
+			+r3
+				width: 100%
+				padding-top: 17px
 
 .request-label
 	padding-bottom: 3px
@@ -212,6 +250,8 @@
 .request-search
 	position: relative
 	margin-bottom: 17px
+	+r3
+		margin-bottom: 0
 	&__btn
 		position: absolute
 		top: 0
@@ -232,16 +272,18 @@
 		content: ""
 		position: absolute
 		z-index: 10
-		bottom: 0
+		bottom: -1px
 		left: 0
 		right: 0
 		height: 29px
-		background: linear-gradient(180deg, rgba(#fff, 0) 0%, #fff 100%)
+		background: linear-gradient(180deg, rgba(#fff, 0) 0%, #fff 95%)
 		pointer-events: none
 
 .request-posts
 	position: relative
-	padding: 10px 20px
+	padding: 10px 20px 25px
+	+r3
+		padding: 10px 15px 25px
 
 .request-post
 	padding: 10px 0 3px
@@ -325,6 +367,13 @@
 	border: 1px solid #e6e6e6
 	background: #fff
 	box-shadow: 0 0 30px rgba(0, 0, 0, 0.4)
+	+r1
+		box-shadow: 0 0 10px rgba(#000, 0.2)
+	+r3
+		border-right: none
+		border-left: none
+		border-bottom: none
+		box-shadow: none
 	&:after
 		content: ""
 		position: absolute
@@ -332,6 +381,8 @@
 		left: 95px
 		margin-top: -1px
 		+arr(46, 44, #fff, b)
+		+r1
+			display: none
 	&__close
 		position: absolute
 		bottom: 100%
@@ -340,8 +391,15 @@
 		background: none
 		font-size: 22px
 		margin-bottom: 12px
+		+r1
+			bottom: auto
+			top: 10px
+			right: 10px
+			color: #fff
 	&__header
 		padding-bottom: 15px
+		+r3
+			padding-bottom: 0
 	&__title
 		padding: 31px 50px 11px 141px
 		margin: -1px -1px 0
@@ -350,6 +408,10 @@
 		+med
 		font-size: 24px
 		line-height: 30px
+		+r3
+			padding: 25px 20px 11px 120px
+			font-size: 16px
+			line-height: 24px
 	&__avatar
 		position: absolute
 		top: 21px
@@ -362,19 +424,26 @@
 		background-position: center
 		background-color: #d8d8d8
 		background-size: cover
+		+r3
+			width: 74px
+			height: 74px
 	&__info
 		padding: 9px 15px 22px 140px
 		+clr
+		+r3
+			padding-left: 120px
 	&__rating
 		position: relative
 		float: left
 		font-size: 0
 		white-space: nowrap
 		pointer-events: none
+		+r3
+			float: none
 		i
 			color: #f8e71c
 			font-size: 18px
-			letter-spacing: 2px
+			padding: 0 1px
 	&__rating-in
 		position: absolute
 		top: 0
@@ -384,6 +453,10 @@
 	&__social
 		float: right
 		font-size: 0
+		+r3
+			float: none
+			padding-top: 10px
+			margin-left: -5px
 		li,
 		a
 			display: inline-block
@@ -398,18 +471,27 @@
 	&__content
 		padding: 0 20px
 		color: #282828
+		+r3
+			padding: 0 15px
 		p
 			+light
 			font-size: 15px
 			line-height: 20px
 			margin-bottom: 16px
+			+r3
+				font-size: 14px
 	&__subtitle
 		+med
 		font-size: 18px
 		line-height: 22px
 		margin-bottom: 10px
+		+r3
+			font-size: 16px
+			line-height: 20px
 	&__points
 		padding-bottom: 3px
+		+r3
+			margin-bottom: 8px
 		li
 			margin-bottom: 7px
 			+clr
@@ -438,6 +520,8 @@
 	&__footer
 		padding: 8px 20px 20px
 		+clr
+		+r3
+			padding: 8px 15px 25px
 	&__meta
 		float: left
 		padding: 13px 0 9px
@@ -446,9 +530,19 @@
 		font-size: 11px
 		line-height: 18px
 		letter-spacing: 1px
+		+r3
+			float: none
+			padding: 0
 	&__buttons
 		float: right
 		text-align: right
 		white-space: nowrap
+		+r3
+			float: none
+			white-space: normal
 		button
 			margin-left: 20px
+			+r3
+				display: block
+				width: 100%
+				margin: 20px auto 0
