--- a/src/partials/big-map.html
+++ b/src/partials/big-map.html
@@ -188,7 +188,7 @@
 								<div class="request-form__calendar-icon">
 									<i class="fa fa-calendar"></i>
 								</div>
-								<input type="text" class="request-form__calendar-input new-input">
+								<input type="text" class="request-form__calendar-input new-input js-datepicker" placeholder="Дата">
 							</div>
 						</div>
 						<div class="request-form__field">
@@ -207,7 +207,7 @@
 				</div>
 				<div class="request-tooltip js-show-onfocus-container" data-container="points">
 					<div class="request-tooltip__hint js-tooltip-hint" data-tooltip="request">Использовать домашний адрес</div>
-					<button class="request-tooltip__btn request-tooltip__marker fa fa-map-marker js-tooltip-item" data-tooltip="request" data-title="Использовать не домашний адрес"></button>
+					<button class="request-tooltip__btn request-tooltip__marker fa fa-map-marker js-tooltip-item" data-tooltip="request" data-title="Я хочу выбрать точку на карте"></button>
 					<button class="request-tooltip__btn request-tooltip__home fa fa-home js-tooltip-item" data-tooltip="request" data-title="Использовать домашний адрес"></button>
 				</div>
 			</div>
