--- a/src/sass/_big-map.sass
+++ b/src/sass/_big-map.sass
@@ -114,11 +114,13 @@
 		position: relative
 	&__calendar-icon
 		position: absolute
+		z-index: 3
 		top: 0
 		right: 0
 		padding: 9px 14px 8px
 		color: #a6a6a6
 		font-size: 24px
+		pointer-events: none
 	&__calendar-input
 		padding-right: 50px
 	&__textarea
