--- a/src/sass/new-style.sass
+++ b/src/sass/new-style.sass
@@ -112,6 +112,12 @@ $mint: #9bc1bc
 			a
 				font-size: 16px
 
+select
+	height: 30px
+	border-radius: 3px
+	width: 100%
+	color: #4a4a4a
+
 .page-heading
 	padding: 35px 0 36px
 	&__title
@@ -278,8 +284,11 @@ $mint: #9bc1bc
 		left: 0
 		overflow: hidden
 
+
+
 @import big-map
 @import service-menu
 @import inbox
 @import service-feedback
 @import evaluate
+@import datebox-custom
