--- a/src/sass/new-style.sass
+++ b/src/sass/new-style.sass
@@ -98,12 +98,15 @@ $mint: #9bc1bc
 		+reg
 		&.selectBox-menuShowing
 			border-radius: 3px 3px 0 0
+		&.selectBox-menuShowing-top
+			border-radius: 0 0 3px 3px
 		.selectBox-label
 			font-size: 16px
 			padding: 14px 20px 13px 8px
 		.selectBox-arrow
 			right: 12px
 			color: #999
+
 
 .selectBox-options
 	&.is-medium-selectBox-dropdown-menu
@@ -117,6 +120,36 @@ select
 	border-radius: 3px
 	width: 100%
 	color: #4a4a4a
+
+.select-xs
+	border-radius: 3px
+	border-color: #d9d9d9
+	background: #fff
+	+reg
+	&:focus
+		border-color: #d9d9d9
+	&.selectBox-menuShowing
+		border-radius: 3px 3px 0 0
+	&.selectBox-menuShowing-top
+		border-radius: 0 0 3px 3px
+	.selectBox-label
+		padding: 9px 30px 8px 10px
+		font-size: 16px
+		+r3
+			padding: 4px 30px 3px 6px
+			font-size: 14px
+	.selectBox-arrow
+		right: 14px
+		color: #999
+		+r3
+			right: 9px
+
+.selectBox-options
+	&.select-xs-selectBox-dropdown-menu
+		border-color: #d9d9d9
+		li
+			a
+				font-size: 16px
 
 .page-heading
 	padding: 35px 0 36px
@@ -284,7 +317,137 @@ select
 		left: 0
 		overflow: hidden
 
+.simple-checkbox
+	position: relative
+	display: inline-block
+	vertical-align: top
+	cursor: pointer
+	+nosel
+	input
+		position: absolute
+		top: 0
+		left: 0
+		opacity: 0
+		visibility: hidden
+		&:checked
+			~ i,
+			~ span:after
+				opacity: 1
+	span
+		display: inline-block
+		vertical-align: top
+		padding: 4px 0 3px 40px
+		color: #282828
+		+reg
+		font-size: 18px
+		line-height: 1
+		+r3
+			padding: 2px 0 2px 25px
+			font-size: 14px
+		&:before,
+		&:after
+			content: ""
+			position: absolute
+			top: 0
+			left: 0
+			border-radius: 3px
+			width: 25px
+			height: 25px
+			+r3
+				width: 15px
+				height: 15px
+		&:before
+			z-index: 1
+			border: 1px solid #d9d9d9
+			background: #fff
+		&:after
+			z-index: 2
+			opacity: 0
+			background: $orange
+			transition: opacity 0.3s ease
+	i
+		position: absolute
+		z-index: 3
+		top: 5px
+		left: 5px
+		color: #fff
+		opacity: 0
+		font-size: 16px
+		transition: opacity 0.3s ease
+		+r3
+			top: 3px
+			left: 3px
+			font-size: 10px
+	&_small
+		span
+			padding: 2px 0 2px 25px
+			font-size: 14px
+			&:before,
+			&:after
+				width: 15px
+				height: 15px
+		i
+			top: 3px
+			left: 3px
+			font-size: 10px
+	&_gray
+		span
+			color: #9b9b9b
 
+.btn-link
+	display: inline-block
+	vertical-align: top
+	color: #6c8784
+	background: none
+	+reg
+	font-size: 14px
+	line-height: 22px
+	transition: color 0.3s ease
+	+hover
+		color: #000
+		+r3
+			color: #fff
+	&:active
+		+r3
+			background: linear-gradient(180deg, #e7825d 0%, #ff8c61 100%)
+	+r3
+		padding: 0 9px
+		border-radius: 3px
+		background: linear-gradient(180deg, #ff8c61 0%, #e7825d 100%)
+		box-shadow: 0 2px 0 #e87448
+		color: #fff
+		font-size: 13px
+		line-height: 24px
+
+
+.simple-textarea,
+.simple-input
+	padding: 9px 20px 8px 10px
+	border: 1px solid #d9d9d9
+	width: 100%
+	background: #ffffff
+	color: #282828
+	+reg
+	font-size: 16px
+	line-height: 18px
+	+r3
+		padding: 4px 6px
+		font-size: 14px
+		line-height: 1.3
+	&::placeholder
+		color: #d8d8d8
+		opacity: 1
+
+.simple-textarea
+	height: 120px
+	resize: none
+
+.simple-input
+	border-radius: 3px
+
+.selectBox-label, .selectBox
+	width: 100% !important
+	min-width: 0
 
 @import big-map
 @import service-menu
@@ -292,3 +455,4 @@ select
 @import service-feedback
 @import evaluate
 @import datebox-custom
+@import more-settings
