--- a/src/sass/new-style.sass
+++ b/src/sass/new-style.sass
@@ -336,10 +336,10 @@ select
 	span
 		display: inline-block
 		vertical-align: top
-		padding: 4px 0 3px 40px
+		padding: 5px 0 0 35px
 		color: #282828
 		+reg
-		font-size: 18px
+		font-size: 16px
 		line-height: 1
 		+r3
 			padding: 2px 0 2px 25px
