main-volonter desctop

--- a/src/partials/how-tabs.html
+++ b/src/partials/how-tabs.html
@@ -20,16 +20,22 @@
             <p>Опиши, какая конкретно помощь тебе нужна, когда и где. После модерации заявка появится на карте. Мы не рекомендуем оставлять заявки, связанные с доступом в квартиру, потому что не знаем каждого человека и не несем за них ответственность.</p>
           </div>
         </div>
-      </div>
-      <div class="how-block">
-        <div class="how-block__img">
-          <img src="img/volonter/how/how-2.svg" alt="">
+        <div class="how-block__curve-line">
+          <img src="img/volonter/curve-line-1.svg" alt="">
         </div>
+      </div>
+      <div class="how-block">        
         <div class="how-block__text">
           <div class="how-block__title">2. Выбери помощника</div>
           <div class="how-block__descr">
             <p>Теперь люди могут предлагать свою помощь – каждый отклик ты будешь видеть в личном кабинете. Изучи волонтеров и выбери одного, нажав соответствующую кнопку рядом с ним. Помни, откликнуться на заявку может любой желающий, поэтому не стоит доверять серьезные вопросы человеку, в котором ты сам не уверен – мы не знаем каждого волонтера и не контролируем их действия.</p>
           </div>
+        </div>
+        <div class="how-block__img is-right">
+          <img src="img/volonter/how/how-2.svg" alt="">
+        </div>
+        <div class="how-block__curve-line">
+          <img src="img/volonter/curve-line-2.svg" alt="">
         </div>
       </div>
       <div class="how-block">
@@ -56,16 +62,22 @@
             <p>Опиши, какая конкретно помощь тебе нужна, когда и где. После модерации заявка появится на карте. Мы не рекомендуем оставлять заявки, связанные с доступом в квартиру, потому что не знаем каждого человека и не несем за них ответственность.</p>
           </div>
         </div>
-      </div>
-      <div class="how-block">
-        <div class="how-block__img">
-          <img src="img/volonter/how/how-2.svg" alt="">
+        <div class="how-block__curve-line">
+          <img src="img/volonter/curve-line-1.svg" alt="">
         </div>
+      </div>
+      <div class="how-block">        
         <div class="how-block__text">
           <div class="how-block__title">2. Выбери помощника</div>
           <div class="how-block__descr">
             <p>Теперь люди могут предлагать свою помощь – каждый отклик ты будешь видеть в личном кабинете. Изучи волонтеров и выбери одного, нажав соответствующую кнопку рядом с ним. Помни, откликнуться на заявку может любой желающий, поэтому не стоит доверять серьезные вопросы человеку, в котором ты сам не уверен – мы не знаем каждого волонтера и не контролируем их действия.</p>
           </div>
+        </div>
+        <div class="how-block__img is-right">
+          <img src="img/volonter/how/how-2.svg" alt="">
+        </div>
+        <div class="how-block__curve-line">
+          <img src="img/volonter/curve-line-2.svg" alt="">
         </div>
       </div>
       <div class="how-block">
@@ -92,16 +104,22 @@
             <p>Опиши, какая конкретно помощь тебе нужна, когда и где. После модерации заявка появится на карте. Мы не рекомендуем оставлять заявки, связанные с доступом в квартиру, потому что не знаем каждого человека и не несем за них ответственность.</p>
           </div>
         </div>
-      </div>
-      <div class="how-block">
-        <div class="how-block__img">
-          <img src="img/volonter/how/how-2.svg" alt="">
+        <div class="how-block__curve-line">
+          <img src="img/volonter/curve-line-1.svg" alt="">
         </div>
+      </div>
+      <div class="how-block">        
         <div class="how-block__text">
           <div class="how-block__title">2. Выбери помощника</div>
           <div class="how-block__descr">
             <p>Теперь люди могут предлагать свою помощь – каждый отклик ты будешь видеть в личном кабинете. Изучи волонтеров и выбери одного, нажав соответствующую кнопку рядом с ним. Помни, откликнуться на заявку может любой желающий, поэтому не стоит доверять серьезные вопросы человеку, в котором ты сам не уверен – мы не знаем каждого волонтера и не контролируем их действия.</p>
           </div>
+        </div>
+        <div class="how-block__img is-right">
+          <img src="img/volonter/how/how-2.svg" alt="">
+        </div>
+        <div class="how-block__curve-line">
+          <img src="img/volonter/curve-line-2.svg" alt="">
         </div>
       </div>
       <div class="how-block">
