--- a/src/sass/lib/_mixins.sass
+++ b/src/sass/lib/_mixins.sass
@@ -271,3 +271,24 @@
 =fs($sizeValue: 16)
 	font-size: $sizeValue + px
 	font-size: $sizeValue / 10 + rem
+
+//icon close
+=icon-close($size, $line-width, $color)
+	position: relative
+	display: inline-block
+	width: $size + px
+	height: $size + px
+	&::before,
+	&::after
+		position: absolute
+		content: ''
+		width: $line-width + px
+		height: 100%
+		background-color: $color
+		top: 0
+		left: 50%
+	&::before
+		transform: rotate(45deg)
+	&::after
+		transform: rotate(-45deg)
+//example +icon-close(15, 2, #000)
