--- a/src/sass/new-styles-2/_how.sass
+++ b/src/sass/new-styles-2/_how.sass
@@ -36,7 +36,7 @@
       right: 0
       top: 50%
       transform: translate(0, -50%)
-      background-color: #d8d8d8
+      background-color: $gray
     &:last-child
       &::before
         display: none
