--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -22,7 +22,7 @@
   vertical-align: top
   margin-right: 30px
   width: calc(33.33333% - 20px)
-  border: 1px solid #d8d8d8
+  border: 1px solid $gray
   border-radius: 3px
   background-color: #fff
   padding-top: 30px
@@ -42,7 +42,7 @@
     padding-bottom: 30px
     +med
     color: $text
-    border-bottom: 1px solid #d8d8d8
+    border-bottom: 1px solid $gray
     +tr(color .3s)
     margin-bottom: 19px
   &__person
