--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -13,7 +13,7 @@
     max-width: 220px
 
 .filter-tags
-  border-bottom: 1px solid  #d8d8d8
+  border-bottom: 1px solid  $gray
   padding-bottom: 10px
 
 .filter-tag
@@ -23,7 +23,7 @@
   +reg
   color: #353535
   border-radius: 3px
-  border: 1px solid #d8d8d8
+  border: 1px solid $gray
   min-width: 120px
   padding: 9px 35px
   margin-right: 20px
@@ -62,7 +62,7 @@
 
 .helpers
   font-size: 0
-  border-bottom: 1px solid  #d8d8d8
+  border-bottom: 1px solid  $gray
   padding-bottom: 37px
   &__btn
     max-width: 220px
@@ -98,6 +98,7 @@
     text-align: center
   &__social-icon
     display: inline-block
+    margin: 0 4px
   &__info
     font-size: 0
   &__info-block
@@ -115,7 +116,7 @@
   padding-top: 78px
   padding-bottom: 0
   &__slider
-    border-bottom: 1px solid  #d8d8d8
+    border-bottom: 1px solid  $gray
     margin-bottom: 36px
     &.has-no-bd-bottom
       border-bottom: none
