add volonter catalog desktop

--- a/src/partials/filter-tags.html
+++ b/src/partials/filter-tags.html
@@ -1,5 +1,5 @@
 <!-- begin filter-tags -->
-<div class="filter-tags">
+<div class="filter-tags has-bd-bottom">
   <button class="filter-tag">
     <span class="filter-tag__lable">Все</span>
     <i class="close-icon"></i>
