--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -12,9 +12,10 @@
   &__btn
     max-width: 220px
 
-.filter-tags
-  border-bottom: 1px solid  $gray
+.filter-tags  
   padding-bottom: 10px
+  &.has-bd-bottom
+    border-bottom: 1px solid  $gray
 
 .filter-tag
   display: inline-block
@@ -25,7 +26,7 @@
   border-radius: 3px
   border: 1px solid $gray
   min-width: 120px
-  padding: 9px 35px
+  padding: 10px 35px
   margin-right: 20px
   margin-bottom: 20px
   background-color: transparent
@@ -38,6 +39,12 @@
   &:focus, &.is-active
     background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
     color: #fff
+
+  &_fixed-width
+    width: 230px
+    padding-left: 10px
+    padding-right: 10px
+    margin-bottom: 0
 
 .helpers-section
   background-color: #f5f7f7
