--- a/src/sass/new-styles-2/_popup.sass
+++ b/src/sass/new-styles-2/_popup.sass
@@ -33,3 +33,18 @@
   &__btn
     max-width: 220px
     margin: 0 auto
+
+.popup-catalog
+  .popup__body
+    padding-left: 30px
+    padding-right: 35px
+    padding-top: 39px
+    padding-bottom: 39px
+  &__title
+    border-bottom: 1px solid  $gray
+    padding-bottom: 20px
+  &__feedbacks
+    margin-bottom: 40px
+  &__btn
+    max-width: 220px
+    margin: 0 auto
