--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -119,6 +119,40 @@
       position: relative
       top: -0.3em
 
+  &_width
+    display: flex
+    justify-content: space-between
+    width: 100%
+    .helper__social
+      position: static
+      text-align: left
+      margin-bottom: 20px
+    .helper__social-icon
+      margin-left: 0
+      margin-right: 10px
+      svg
+        width: 30px
+        height: 30px
+    .helper__name
+      margin-bottom: 11px
+    .helper__info-block
+      width: auto
+      margin-right: 20px
+    &__center
+      flex: 1
+      text-align: left
+      padding-left: 39px
+      padding-top: 16px
+    &__city
+      font-size: 16px
+      color: $text
+      margin-bottom: 18px
+    &__right
+      padding-top: 29px
+    &__type
+      font-size: 16px
+      color: $text
+
 .partners
   padding-top: 78px
   padding-bottom: 0
