add acoount desktop

--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -252,6 +252,16 @@ $gray: #d8d8d8
     color: $text
     +reg
 
+.user-container
+  &_mod
+  .user-left
+    // width: 61.7%
+    &__in
+      width: 990px
+      padding-right: 30px
+  .user-right
+    // width: 38.3%
+
 
 
 //CONTENT
@@ -266,3 +276,6 @@ $gray: #d8d8d8
 @import new-styles-2/request
 @import new-styles-2/popup
 @import new-styles-2/catalog
+@import service-menu
+@import new-styles-2/service-menu
+@import new-styles-2/applications
