--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -16,6 +16,10 @@
   padding-bottom: 10px
   &.has-bd-bottom
     border-bottom: 1px solid  $gray
+    .filter-tag
+      margin-bottom: 20px
+  &.has-no-padding
+    padding: 0
 
 .filter-tag
   display: inline-block
@@ -27,8 +31,7 @@
   border: 1px solid $gray
   min-width: 120px
   padding: 10px 35px
-  margin-right: 20px
-  margin-bottom: 20px
+  margin-right: 20px  
   background-color: transparent
   position: relative
   .close-icon
